--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -108,10 +108,12 @@ h1.dyno-force {
   }
 
   .main-find-buttons, .main-host-buttons {
+    text-align: center;
     position: absolute;
     bottom: 1vw;
-    width: 100%;
-
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
     button {
       margin: 10px;
     }
@@ -129,33 +131,36 @@ h1.dyno-force {
 
 
 .host-list {
-  list-style-type: none;
+  margin-top: 20px;
 }
 
+
 .player-list {
-  list-style-type: none;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  font-size: 4vw;
+  text-align: left;
+
 }
 
 .pilot-name {
   font-weight: bold;
-  color: $color-light-blue;
-}
-
-ul.host-list li {
-  height: 12vw;
-
-  button {
-    font-size: 4vw;
-  }
+  color: white;
 }
 
 .host-info {
   font-size: 5vw;
 }
 
+.team-name {
+  color: white;
+}
+
 .mech-name {
   font-weight: bold;
-  color: $color-green;
+  color: white;
 }
 
 .waiting {
